[gd_scene load_steps=18 format=2]

[ext_resource path="res://Enemies/EnemySkeleton/Skeleton-Walk/skeleton-walk2.png" type="Texture" id=1]
[ext_resource path="res://Enemies/EnemySkeleton/Skeleton-Walk/skeleton-walk4.png" type="Texture" id=2]
[ext_resource path="res://Enemies/EnemySkeleton/Skeleton-Walk/skeleton-walk5.png" type="Texture" id=3]
[ext_resource path="res://Enemies/EnemySkeleton/Skeleton-Walk/skeleton-walk6.png" type="Texture" id=4]
[ext_resource path="res://Enemies/EnemySkeleton/Skeleton-Walk/skeleton-walk7.png" type="Texture" id=5]
[ext_resource path="res://Enemies/EnemySkeleton/Skeleton-Walk/skeleton-walk8.png" type="Texture" id=6]
[ext_resource path="res://Enemies/EnemySkeleton/Skeleton-Walk/skeleton-walk3.png" type="Texture" id=7]
[ext_resource path="res://Enemies/EnemySkeleton/Skeleton-Walk/skeleton-walk1.png" type="Texture" id=8]
[ext_resource path="res://Enemies/EnemySkeleton/Skeleton-IDle/skeleton-idle2.png" type="Texture" id=9]
[ext_resource path="res://Enemies/EnemySkeleton/Skeleton-IDle/skeleton-idle1.png" type="Texture" id=10]
[ext_resource path="res://Enemies/EnemySkeleton/Skeleton-IDle/skeleton-idle3.png" type="Texture" id=11]
[ext_resource path="res://Enemies/EnemySkeleton/Skeleton-IDle/skeleton-idle4.png" type="Texture" id=12]
[ext_resource path="res://Enemies/EnemySkeleton/EnemySkeleton.gd" type="Script" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Walk",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 6.0
height = 8.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.5, 12.75 )

[node name="EnemySkeleton" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 13 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8 )
frames = SubResource( 1 )
animation = "Idle"
playing = true

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Raycasts" type="Node2D" parent="."]

[node name="FloorLeft" type="RayCast2D" parent="Raycasts"]
position = Vector2( -7, 8 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="FloorRight" type="RayCast2D" parent="Raycasts"]
position = Vector2( 7, 8 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="WallLeft" type="RayCast2D" parent="Raycasts"]
position = Vector2( -7, 0 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 10 )

[node name="WallRight" type="RayCast2D" parent="Raycasts"]
position = Vector2( 6, 0 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 10 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, -2 )
shape = SubResource( 3 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -5.25 )
shape = SubResource( 4 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
